# digit_controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/: PS_planner.hpp  digit_definition.hpp  digit_state.hpp  domain_control.hpp  filter.hpp  input_listener.hpp  motor_control.hpp  robot_expressions.hpp  safety_manager.hpp  standing_controller.hpp  step_planner.hpp  turtlebot.hpp  utilities.hpp  walking_trajectory.hpp
include/AnalyticalKinematicsDynamics/: CMakeLists.txt  README.md  all_kinematics.h  all_kinematics_fixarm.h  analytical_expressions.cpp  analytical_expressions.hpp  analytical_expressions_fixarm.cpp  analytical_expressions_fixarm.hpp  generate_include_all_header.sh
include/AnalyticalKinematicsDynamics/dyn/: CoriolisTerm_src.cpp  CoriolisTerm_src.h  GravityVector_src.cpp  GravityVector_src.h  InertiaMatrix_src.cpp  InertiaMatrix_src.h
include/AnalyticalKinematicsDynamics/dynFixArm/: CoriolisTerm_src.cpp  CoriolisTerm_src.h  GravityVector_src.cpp  GravityVector_src.h  InertiaMatrix_src.cpp  InertiaMatrix_src.h
include/AnalyticalKinematicsDynamics/kin/: AMBody_left_elbow_src.cpp  AMBody_left_elbow_src.h  AMBody_left_hip_pitch_src.cpp  AMBody_left_hip_pitch_src.h  AMBody_left_hip_roll_src.cpp  AMBody_left_hip_roll_src.h  AMBody_left_hip_yaw_src.cpp  AMBody_left_hip_yaw_src.h  AMBody_left_knee_src.cpp  AMBody_left_knee_src.h  AMBody_left_shoulder_pitch_src.cpp  AMBody_left_shoulder_pitch_src.h  AMBody_left_shoulder_roll_src.cpp  AMBody_left_shoulder_roll_src.h  AMBody_left_shoulder_yaw_src.cpp  AMBody_left_shoulder_yaw_src.h  AMBody_left_tarsus_src.cpp  AMBody_left_tarsus_src.h  AMBody_left_toe_pitch_src.cpp  AMBody_left_toe_pitch_src.h  AMBody_left_toe_roll_src.cpp  AMBody_left_toe_roll_src.h  AMBody_right_elbow_src.cpp  AMBody_right_elbow_src.h  AMBody_right_hip_pitch_src.cpp  AMBody_right_hip_pitch_src.h  AMBody_right_hip_roll_src.cpp  AMBody_right_hip_roll_src.h  AMBody_right_hip_yaw_src.cpp  AMBody_right_hip_yaw_src.h  AMBody_right_knee_src.cpp  AMBody_right_knee_src.h  AMBody_right_shoulder_pitch_src.cpp  AMBody_right_shoulder_pitch_src.h  AMBody_right_shoulder_roll_src.cpp  AMBody_right_shoulder_roll_src.h  AMBody_right_shoulder_yaw_src.cpp  AMBody_right_shoulder_yaw_src.h  AMBody_right_tarsus_src.cpp  AMBody_right_tarsus_src.h  (+1557 more)
include/AnalyticalKinematicsDynamics/kinFixArm/: Jb_LeftToeBottomBack_src.cpp  Jb_LeftToeBottomBack_src.h  Jb_LeftToeBottomFront_src.cpp  Jb_LeftToeBottomFront_src.h  Jb_LeftToeBottom_src.cpp  Jb_LeftToeBottom_src.h  Jb_RightToeBottomBack_src.cpp  Jb_RightToeBottomBack_src.h  Jb_RightToeBottomFront_src.cpp  Jb_RightToeBottomFront_src.h  Jb_RightToeBottom_src.cpp  Jb_RightToeBottom_src.h  Jp_LeftToeBottomBack_src.cpp  Jp_LeftToeBottomBack_src.h  Jp_LeftToeBottomFront_src.cpp  Jp_LeftToeBottomFront_src.h  Jp_LeftToeBottom_src.cpp  Jp_LeftToeBottom_src.h  Jp_RightToeBottomBack_src.cpp  Jp_RightToeBottomBack_src.h  Jp_RightToeBottomFront_src.cpp  Jp_RightToeBottomFront_src.h  Jp_RightToeBottom_src.cpp  Jp_RightToeBottom_src.h  Js_LeftToeBottomBack_src.cpp  Js_LeftToeBottomBack_src.h  Js_LeftToeBottomFront_src.cpp  Js_LeftToeBottomFront_src.h  Js_LeftToeBottom_src.cpp  Js_LeftToeBottom_src.h  Js_RightToeBottomBack_src.cpp  Js_RightToeBottomBack_src.h  Js_RightToeBottomFront_src.cpp  Js_RightToeBottomFront_src.h  Js_RightToeBottom_src.cpp  Js_RightToeBottom_src.h  R_LeftToeBottomBack_src.cpp  R_LeftToeBottomBack_src.h  R_LeftToeBottomFront_src.cpp  R_LeftToeBottomFront_src.h  (+92 more)
include/AnalyticalKinematicsDynamics/test/: main.cc
include/GeometricKinematics/: CMakeLists.txt  FK_Geo_p.cpp  FK_Geo_p.h  FK_Geo_v.cpp  FK_Geo_v.h  IK_Geo_p.cpp  IK_Geo_p.h  IK_Geo_v.cpp  IK_Geo_v.h  J_FK_Geo_p.cpp  J_FK_Geo_p.h  J_IK_Geo_p.cpp  J_IK_Geo_p.h  KinGeo_initialize.cpp  KinGeo_initialize.h  KinGeo_rtwutil.cpp  KinGeo_rtwutil.h  KinGeo_terminate.cpp  KinGeo_terminate.h  KinGeo_types.h  dJ_FK_Geo_p.cpp  dJ_FK_Geo_p.h  dJ_IK_Geo_p.cpp  dJ_IK_Geo_p.h  geo_expressions.cpp  geo_expressions.hpp  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
include/GeometricKinematics/examples/: main.cpp  main.h  test.cpp
include/MathExpr/: J_leftFoot.cc  J_leftFoot.hh  J_rightFoot.cc  J_rightFoot.hh  T_leftFoot.cc  T_leftFoot.hh  T_rightFoot.cc  T_rightFoot.hh  math2mat.hpp  mdefs.hpp  p_com.cc  p_com.hh  p_leftFoot.cc  p_leftFoot.hh  p_rightFoot.cc  p_rightFoot.hh  v_com.cc  v_com.hh
launch/: digit_hardware.launch  digit_main_node.launch  juggler.launch  main.launch  teleop.launch  websockets_launch.launch
log/: PSP_tracking.xml  plot_actuation.ipynb  plot_global_traj.ipynb  plotbag_layout.xml  plotjuggler_layout.xml  read_log_data_csv.m  torso_reg.xml
msg/: DigitState.msg
scripts/: keyinput.py  websockets_node.py
src/: PS_planner.cpp  digit_main.cpp  digit_state.cpp  domain_control.cpp  filter.cpp  input_listener.cpp  motor_control.cpp  robot_expressions.cpp  safety_manager.cpp  standing_controller.cpp  step_planner.cpp  turtlebot.cpp  walking_trajectory.cpp
src/config_files/: 99-conf-overrides.toml  log_obstacle_belief_with_switch1.txt  log_psp_belief_with_switch1.txt  regulators_config.toml  robot_config.toml  trajectory_config.toml
test/: CMakeLists.txt  test_analytical_kindyn.cpp  test_entrypoint.h  test_geometric_kin.cpp
